Tugas Individu 2 - add README.md

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header>
-    <h1>Kick Corner</h1>
+    <h1>{{ shop }}</h1>
     <p>{{ npm }} — {{ name }} ({{ class }})</p>
   </header>
 
