--- a/main/templates/product_detail.html
+++ b/main/templates/product_detail.html
@@ -65,4 +65,11 @@
 
   <p class="description">{{ product.description }}</p>
 </article>
+
+{% if product.user %}
+    <p>Author: {{ product.user.username }}</p>
+{% else %}
+    <p>Author: Anonymous</p>
+{% endif %}
+
 {% endblock content %}
