--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Kick Corner – Products{% endblock title %}
-
+{% include 'navbar.html' %}
 {% block extra_css %}
 <style>
   .actions { display:flex; gap:8px; margin:12px 0 16px; }
@@ -56,6 +56,10 @@
             {# tombol view detail #}
             <div class="actions">
                 <a href="{% url 'main:show_product' p.id %}" class="btn btn-outline">View details</a>
+                {% if user.is_authenticated and p.user == user %}
+                <a href="{% url 'main:edit_product' p.pk %}" class="btn btn-outline">Edit</a>
+                <a href="{% url 'main:delete_product' p.pk %}" class="btn btn-outline">Delete</a>
+                {% endif %}
             </div>
           </article>
         </li>
