--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,8 @@
 
     {% block extra_css %}{% endblock extra_css %}
     {% block meta %}{% endblock meta %}
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="{% static 'css/global.css' %}"/>
 </head>
 <body>
     {% block content %}{% endblock content %}
