--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -2,7 +2,7 @@
 {% block meta %}<title>Login</title>{% endblock meta %}
 
 {% block content %}
-<div class="bg-gray-50 w-full min-h-screen flex items-center justify-center p-8 pt-24">
+<div class="bg-gray-50 w-full min-h-screen flex items-center justify-center p-8">
   <div class="max-w-md w-full">
     <div class="bg-white rounded-lg border border-gray-200 p-6 sm:p-8 form-style">
       <div class="text-center mb-8">
